Hide overflow on body to prevent scrolling on anim

--- a/style.css
+++ b/style.css
@@ -18,10 +18,15 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   color: var(--dark-green);
   background-color: var(--snow);
+  overflow: hidden;
+}
+
+h1 {
+  padding: 0 0.1em;
 }
 
 .launchpad {
@@ -41,6 +46,7 @@ body {
 
 .crew {
   font-size: 30px;
+  position: relative;
 }
 
 button {
@@ -109,8 +115,18 @@ button:hover {
     transform: translate(-150%, 0);
   }
 
+  50% {
+    transform: translate(0, 0);
+  }
+
+  75% {
+    transform: translate(25%, 25%);
+    opacity: 1;
+  }
+
   100% {
-    transform: translate(0);
+    transform: translate(1000%, -1000%);
+    opacity: 0;
   }
 }
 
